--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "latihanlks": "file:",
     "method-override": "^3.0.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.19",
-    "request-ip": "^2.2.0"
+    "mysql2": "^3.14.1",
+    "nodemon": "^3.1.10",
+    "request-ip": "^3.3.0"
   }
 }
