--- a/.github/workflows/deploy-to-vm.yml
+++ b/.github/workflows/deploy-to-vm.yml
@@ -14,6 +14,6 @@ jobs:
         
       - name: Deploy apps
         run: |
-          sudo docker compose pull
-          sudo docker compose down
-          sudo docker compose up -d --build
+          docker compose pull
+          docker compose down
+          docker compose up -d --build
